fix nav collapse

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,18 +152,6 @@ p{
     width: fit-content;
 }
 
-.nav .social{
-    padding: 1.4rem 0
-}
-
-.nav .social i{
-    padding: 0 .2rem;
-}
-
-.nav .social i:hover{
-    color: #a1c4cf;
-}
-
 /* -------x------- navbar ---------x------- */
 
 /* ----------------- Main Content----------- */
